# au-plugin-template

./: .gitignore  CMakeLists.txt  README.md
Source/: GlitchLookAndFeel.h  GrainEngine.cpp  GrainEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
